--- a/index.html
+++ b/index.html
@@ -138,27 +138,27 @@
             <!-- <div class="container"> -->
             <div class="portfolio__items">
                 <div class="portfolio__items--item YouTube">
-                    <img src="/img/maxresdefault.jpg" class="portfolio__items--photo" alt="">
+                    <img src="/img/1.jpg" class="portfolio__items--photo" alt="">
                 </div>
 
                 <div class="portfolio__items--item Comercial ">
-                    <img src="/img/maxresdefault.jpg" class="portfolio__items--photo" alt="">
+                    <img src="/img/2.jpg" class="portfolio__items--photo" alt="">
                 </div>
 
                 <div class="portfolio__items--item Overview">
-                    <img src="/img/maxresdefault.jpg" class="portfolio__items--photo" alt="">
+                    <img src="/img/3.jpg" class="portfolio__items--photo" alt="">
                 </div>
 
                 <div class="portfolio__items--item YouTube">
-                    <img src="/img/maxresdefault.jpg" class="portfolio__items--photo" alt="">
+                    <img src="/img/4.jpg" class="portfolio__items--photo" alt="">
                 </div>
 
                 <div class="portfolio__items--item Comercial ">
-                    <img src="/img/maxresdefault.jpg" class="portfolio__items--photo" alt="">
+                    <img src="/img/5.jpg" class="portfolio__items--photo" alt="">
                 </div>
 
                 <div class="portfolio__items--item YouTube">
-                    <img src="/img/maxresdefault.jpg" class="portfolio__items--photo" alt="">
+                    <img src="/img/6.jpg" class="portfolio__items--photo" alt="">
                 </div>
 
                 <a href="portfolio.html" class="blog__items--link"> Show more</a>
@@ -237,8 +237,8 @@
             </div>
             <div class="contacts-cards__card">
                 <i class="fas fa-envelope icon"></i>
-                <p class="paragraph">info@alberto.com <br>
-                    contact@alberto.com</p>
+                <p class="paragraph">e-mail@mail.com<br>
+                    e-mail@mail.com</p>
             </div>
 
         </div>
