--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section class="about-me">
 
 
-            <img src="/img/vitalii-mietolkin.1024x1024.jpg" alt="" class="about-me__image">
+            <img src="img/vitalii-mietolkin.1024x1024.jpg" alt="" class="about-me__image">
             <div class="about-me__text">
                 <h2>I am Dynamic and Creative</h2>
                 <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam maiores eaque eum
@@ -138,27 +138,27 @@
             <!-- <div class="container"> -->
             <div class="portfolio__items">
                 <div class="portfolio__items--item YouTube">
-                    <img src="/img/1.jpg" class="portfolio__items--photo" alt="">
+                    <img src="img/1.jpg" class="portfolio__items--photo" alt="">
                 </div>
 
                 <div class="portfolio__items--item Comercial ">
-                    <img src="/img/2.jpg" class="portfolio__items--photo" alt="">
+                    <img src="img/2.jpg" class="portfolio__items--photo" alt="">
                 </div>
 
                 <div class="portfolio__items--item Overview">
-                    <img src="/img/3.jpg" class="portfolio__items--photo" alt="">
+                    <img src="img/3.jpg" class="portfolio__items--photo" alt="">
                 </div>
 
                 <div class="portfolio__items--item YouTube">
-                    <img src="/img/4.jpg" class="portfolio__items--photo" alt="">
+                    <img src="img/4.jpg" class="portfolio__items--photo" alt="">
                 </div>
 
                 <div class="portfolio__items--item Comercial ">
-                    <img src="/img/5.jpg" class="portfolio__items--photo" alt="">
+                    <img src="img/5.jpg" class="portfolio__items--photo" alt="">
                 </div>
 
                 <div class="portfolio__items--item YouTube">
-                    <img src="/img/6.jpg" class="portfolio__items--photo" alt="">
+                    <img src="img/6.jpg" class="portfolio__items--photo" alt="">
                 </div>
 
                 <a href="portfolio.html" class="blog__items--link"> Show more</a>
